--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -91,9 +91,6 @@
         </div>
         <br>
         <br>
-        <div class="text-center">
-            <button type="button" class="btn btn-primary btn-lg">Click here to view more</button>
-        </div>
     </div>
 </section>
 
@@ -106,12 +103,12 @@
         <br>
         <div class="row text-center">
             <div class="col-6 align-self-center">
-                <img src = "../images/levelcreator_login.png" style="width: 70%;">
+                <img src = "../images/lc_login.png" style="width: 100%;">
             </div>
             <div class="col-6 align-self-center">
                 <span class="fa-stack fa-4x"><i class="far fa-check-circle text-primary"></i></span>
                 <h4 class="my-3">Create an account and log in.</h4>
-                <p class="text-muted">Logging in allows you to save your work.. consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <p class="text-muted">Logging in allows you to save your work and collaborate with others on different projects.  </p>
             </div>
         </div>
         <br>
@@ -120,11 +117,11 @@
         <div class="row text-center">
             <div class="col-6 align-self-center">
                 <span class="fa-stack fa-4x"><i class="far fa-lightbulb text-primary"></i></span>
-                <h4 class="my-3">View other's work and follow other creators. </h4>
-                <p class="text-muted">consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <h4 class="my-3">View others' projects and share your own. </h4>
+                <p class="text-muted">LevelCreator is a collaborative community where creators can share their work and view others' work.</p>
             </div>
             <div class="col-6 align-self-center">
-                <img src = "../images/public_screen.png" style="width: 90%;">
+                <img src = "../images/sampleWork.png" style="width: 100%;">
             </div>
 
         </div>
@@ -133,12 +130,12 @@
         <br>
         <div class="row text-center">
             <div class="col-6 align-self-center">
-                <img src = "../images/creating_screen.png" style="width: 100%;">
+                <img src = "../images/lc_workspace.png" style="width: 100%;">
             </div>
             <div class="col-6 align-self-center">
                 <span class="fa-stack fa-4x"><i class="fab fa-creative-commons-remix text-primary"></i></span>
                 <h4 class="my-3">Start building your own game level map. </h4>
-                <p class="text-muted">consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit</p>
+                <p class="text-muted">LevelCreator provides creators with multiple building tools such as a layers feature and a tileset drawing tool.</p>
 
             </div>
         </div>
