--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -89,7 +89,7 @@
             </div>
             <div class="row iconrow">
                 <div class="col">
-                    <a th:href="@{/download/{id}(id=${theProject.id})}"><i class="fas fa-download icon" title="Download"></i></a>
+                    <a th:href="@{/downloadJson/{id}(id=${theProject.id})}"><i class="fas fa-download icon" title="Download"></i></a>
                 </div>
             </div>
 
