--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -88,7 +88,7 @@
                     <a sec:authorize ="!isAuthenticated()" class="nav-link" href="/registration">Join us</a>
                 </li>
                 <li class="nav-item">
-                    <a sec:authorize ="!isAuthenticated()" class="nav-link" href="/login">Has an Account</a>
+                    <a sec:authorize ="!isAuthenticated()" class="nav-link" href="/login">Login</a>
                 </li>
             </ul>
         </div>
