--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,14 +65,14 @@
         <br>
         <div class="row text-center">
             <div class="col-md-4 col-xs-12">
-                <img src = "../images/sample3.png" style="width: 90%;">
+                <img src = "./images/sample3.png" style="width: 90%;">
             </div>
             <div class="col-md-4 col-xs-12">
-                <img src = "../images/sample6.png" style="width: 90%;">
+                <img src = "./images/sample6.png" style="width: 90%;">
 
             </div>
             <div class="col-md-4 col-xs-12">
-                <img src = "../images/sample1.png" style="width: 90%;">
+                <img src = "./images/sample1.png" style="width: 90%;">
 
             </div>
         </div>
@@ -80,13 +80,13 @@
         <br>
         <div class="row text-center">
             <div class="col-md-4 col-xs-12">
-                <img src = "../images/sample2.png" style="width: 90%;">
+                <img src = "./images/sample2.png" style="width: 90%;">
             </div>
             <div class="col-md-4 col-xs-12">
-                <img src = "../images/sample5.png" style="width: 90%;">
+                <img src = "./images/sample5.png" style="width: 90%;">
             </div>
             <div class="col-md-4 col-xs-12">
-                <img src = "../images/sample4.png" style="width: 90%;">
+                <img src = "./images/sample4.png" style="width: 90%;">
             </div>
         </div>
         <br>
@@ -103,7 +103,7 @@
         <br>
         <div class="row text-center">
             <div class="col-6 align-self-center">
-                <img src = "../images/lc_login.png" style="width: 100%;">
+                <img src = "./images/lc_login.png" style="width: 100%;">
             </div>
             <div class="col-6 align-self-center">
                 <span class="fa-stack fa-4x"><i class="far fa-check-circle text-primary"></i></span>
@@ -121,7 +121,7 @@
                 <p class="text-muted">LevelCreator is a collaborative community where creators can share their work and view others' work.</p>
             </div>
             <div class="col-6 align-self-center">
-                <img src = "../images/sampleWork.png" style="width: 100%;">
+                <img src = "./images/sampleWork.png" style="width: 100%;">
             </div>
 
         </div>
@@ -130,7 +130,7 @@
         <br>
         <div class="row text-center">
             <div class="col-6 align-self-center">
-                <img src = "../images/lc_workspace.png" style="width: 100%;">
+                <img src = "./images/lc_workspace.png" style="width: 100%;">
             </div>
             <div class="col-6 align-self-center">
                 <span class="fa-stack fa-4x"><i class="fab fa-creative-commons-remix text-primary"></i></span>
@@ -146,7 +146,7 @@
 <!-- Copyright Section -->
 <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
     <div class="container text-center">
-        <small>Copyright &copy; Your Website</small>
+        <small>Copyright &copy; LevelCreator Team</small>
     </div>
 </footer>
 
